# Opengl_practice

./: CMakeLists.txt
include/: Camera.hpp  EBO.hpp  Globals.hpp  ShaderClass.hpp  Shapes.hpp  Textures.hpp  VAO.hpp  VBO.hpp
include/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
resources/shaders/: cube.fs  lightFragment.glsl  lightVertex.glsl  pyramidFragment.glsl  pyramidVertex.glsl  vert.glsl
src/: Camera.cpp  EBO.cpp  ShaderClass.cpp  Textures.cpp  VAO.cpp  VBO.cpp  main.cpp
